<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmed.sfa.activities.InitialLogin"
    android:background="@drawable/bg_blue">
    <!--android:background="@color/bg"-->

    <!-- InitialLogin progress -->
    <ImageView
        app:srcCompat="@drawable/logo"
        android:id="@+id/initialLogo"
        android:layout_height="200dp"
        android:layout_width="500dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="400dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background_normal"
                    android:layout_height="40dp"
                    android:imeOptions="actionNext"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:background="@android:drawable/editbox_background_normal" />

                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/result_Json"
                    android:layout_weight="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:gravity="center"


                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@color/btn"
                android:textSize="18sp" />



        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
