<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvBatch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:listSelector="#33B5E5"></ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="#645E5E"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/labelLastInvoiceQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/last_invoice_qty"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLastInvoiceQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000" />

            <TextView
                android:id="@+id/labelLastThreeMonthAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/last_three_month_average_qty"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLastThreeMonthAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000" />

            <TextView
                android:id="@+id/labelCurrentStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/current_stock"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCurrentStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000" />

            <TextView
                android:id="@+id/labelDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/discount"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelExpiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/expiry_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvExpiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/labelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="Price:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/labelBatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="Batch:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/labelProductCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="Pro. Code:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProductCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelShelfQty"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="Shelf Qty."
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etShelfQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:ems="5"
                android:inputType="number">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/labelRequestQuantity"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="Request Qty"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etRequestQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:ems="5"
                android:inputType="number"></EditText>

            <TextView
                android:id="@+id/labelFree"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="Free:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelNormal"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="Normal:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:ems="5"
                android:inputType="number" />

            <TextView
                android:id="@+id/labelDiscountIn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/discount"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"></EditText>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">
            <!--
                        <Button
                            android:id="@+id/bDone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/done" /> -->

            <Button
                android:id="@+id/bCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>